--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -60,6 +60,11 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="VideoActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
+        </activity>
         <service android:name=".RecognitionService"/>
     </application>
 </manifest>
